ADD_SUBDIRECTORY(cfitsio)
ADD_SUBDIRECTORY(argparse)

# Append current NVCC flags by something, eg comput capability
SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS})

SET(CUDASRCS main.cu)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
SET(CMAKE_CXX_FLAG "-g -Wall")
CUDA_ADD_EXECUTABLE(kabukinai ${CUDASRCS})
TARGET_LINK_LIBRARIES(kabukinai LINK_PRIVATE cfitsio argparse)
